tests/ui/diagnostic_namespace/on_type_error/report_warning_on_non_adt.stderr
warning: `#[diagnostic::on_type_error]` can only be applied to enums, structs or unions
  --> $DIR/report_warning_on_non_adt.rs:3:1
   |
LL | #[diagnostic::on_type_error(note = "not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(misplaced_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: `#[diagnostic::on_type_error]` can only be applied to enums, structs or unions
  --> $DIR/report_warning_on_non_adt.rs:7:1
   |
LL | #[diagnostic::on_type_error(note = "not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `#[diagnostic::on_type_error]` can only be applied to enums, structs or unions
  --> $DIR/report_warning_on_non_adt.rs:11:1
   |
LL | #[diagnostic::on_type_error(note = "not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `#[diagnostic::on_type_error]` can only be applied to enums, structs or unions
  --> $DIR/report_warning_on_non_adt.rs:15:1
   |
LL | #[diagnostic::on_type_error(note = "not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `#[diagnostic::on_type_error]` can only be applied to enums, structs or unions
  --> $DIR/report_warning_on_non_adt.rs:19:1
   |
LL | #[diagnostic::on_type_error(note = "not an ADT")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `#[diagnostic::on_type_error]` can only be applied to enums, structs or unions
  --> $DIR/report_warning_on_non_adt.rs:26:5
   |
LL |     #[diagnostic::on_type_error(note = "not an ADT")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/report_warning_on_non_adt.rs:36:25
   |
LL |     let _: Valid<i32> = SomeStruct;
   |            ----------   ^^^^^^^^^^ expected `Valid<i32>`, found `SomeStruct`
   |            |
   |            expected due to this
   |
   = note: expected `Valid<i32>`, found `SomeStruct`
   = note: expected struct `Valid<i32>`
              found struct `SomeStruct`

error: aborting due to 1 previous error; 6 warnings emitted

For more information about this error, try `rustc --explain E0308`.
